COMING IN A FEW HOURS

--- a/changelog.html
+++ b/changelog.html
@@ -19,6 +19,18 @@
             <li>Added game JustFall.LOL</li>
             <li>Added game Tetris</li>
             <li>Added game Google Snake</li>
+            <li>Added game NitroKnights.io</li>
+            <li>Added game BumperBall.io</li>
+            <li>Added game Archers.io</li>
+            <li>Added game Snake.io war</li>
+            <li>Added game SuperTornado.io</li>
+            <li>Added game Tall.io</li>
+            <li>Added game SuperHero.io</li>
+            <li>Added game HammerMaster.io</li>
+            <li>Added game GoTet.io</li>
+            <li>Added game Knives.io</li>
+            <li>Added game Transporters.io</li>
+            <li>Added game Cubes2048.io</li>
             <li>Added Search bar to games</li>
             <li>Added app Android</li>
             <li>Game Paper.io 2 no longer runs on Scratch</li>
