--- a/games.html
+++ b/games.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">💻 Ninth update is here! 7 NEW games and new features! 😄 <i>[v0.9]</i></p>
+        <p class="updatetext">😲 v1.0 just dropped! Fifteen new games, and cool features! 🤯 <i>[v1.0]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -40,7 +40,7 @@
         <div class="dropdown">
             <button class="dropbtn"><p style="font-weight: bold; padding: 0px 0px; margin-top: 1px; margin-bottom: -1px;">Category</p></button>
             <div class="dropdown-content">
-                <button style="color:green;" onclick="showAllGames()">Recently Added (All Games)</button>
+                <button onclick="showAllGames()">Recently Added (All Games)</button>
                 <button onclick="showHorrorGames()">Horror Games</button>
                 <button onclick="showAdventureGames()">Adventure Games</button>
                 <button onclick="showMultiplayerGames()">Multiplayer Games</button>
