--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">💻 Ninth update is here! 7 NEW games and new features! 😄 <i>[v0.9]</i></p>
+        <p class="updatetext">😲 v1.0 just dropped! Fifteen new games, and cool features! 🤯 <i>[v1.0]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v1.0 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.0 - <span style="color: yellow">6/9/2024</span> - <span style="color: lime">LATEST</span></h1>
         <ul>
             <li>Added game JustFall.LOL</li>
             <li>Added game Tetris</li>
@@ -32,6 +32,7 @@
             <li>Added game Transporters.io</li>
             <li>Added game Cubes2048.io</li>
             <li>Added Search bar to games</li>
+            <li>Added category dropbox to games</li>
             <li>Added app Android</li>
             <li>Game Paper.io 2 no longer runs on Scratch</li>
         </ul>
