--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
 
     <h2 class="rainbow-text">What is coming next on Floopy Network?</h2>
     <center>
-        <p style="font-size: larger; font-weight: bold;" class="substitute">There will be a search bar for games and you could filter games by category.</p>
+        <p style="font-size: larger; font-weight: bold;" class="substitute">Floopy Web will become a browser and more games are to come.</p>
     <center>
 
     
