--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,41 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😲 v1.0 just dropped! Fifteen new games, and cool features! 🤯 <i>[v1.0]</i></p>
+        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v1.0 - <span style="color: yellow">6/9/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.1 - <span style="color: yellow">6/10/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added a README</li>
+            <li>Added the game Dots.io</li>
+            <li>Added the game Pokémon Firered Version</li>
+            <li>Added the game Pokémon Emerald Version</li>
+            <li>Added the game Pokémon Emerald Version 2</li>
+            <li>Added the game Fancy Pants</li>
+            <li>Added the game Fancy Pants 2</li>
+            <li>Added the game Fancy Pants 3</li>
+            <li>Added the game Papa's Pastaria</li>
+            <li>Added the game Papa's Wingeria</li>
+            <li>Added the game Papa's Taco Mia</li>
+            <li>Added the game Papa's Sushiria</li>
+            <li>Added the game Papa's Scooperia</li>
+            <li>Added the game Papa's Pizzeria</li>
+            <li>Added the game Papa's Pancakeria</li>
+            <li>Added the game Papa's Hot Doggeria</li>
+            <li>Added the game Papa's Freezeria</li>
+            <li>Added the game Papa's Donuteria</li>
+            <li>Added the game Papa's Cupcakeria</li>
+            <li>Added the game Papa's Cheeseria</li>
+            <li>Added the game Papa's Burgeria</li>
+            <li>Added the game Papa's Bakeria</li>
+            <li>Added the unblocked website HoodaMath</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v1.0 - <span style="color: yellow">6/9/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added game JustFall.LOL</li>
             <li>Added game Tetris</li>
