--- a/floopyweb.html
+++ b/floopyweb.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😲 v1.0 just dropped! Fifteen new games, and cool features! 🤯 <i>[v1.0]</i></p>
+        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <h1 class="floopywebtext">FLOOPY WEB</h1>
-    <p style="text-align: center; text-shadow: 0 0 15px red;" class="floopywebdesc">Welcome to Floopy Web, where freedom meets the internet. Enter anything on your mind in the box below, it could be a thing you want to search up, or you want to unblock a webpage. Just type what you want to search up or what link you want to unblock then press the "GO" button.<br><b><i>PLEASE NOTE THAT FLOOPY WEB IS STILL IN IS NOT RELIABLE FOR INTENSE USE, THE SERVERS ARE SLOW AND SOMETIMES THE WEBPAGE MIGHT NOT WORK.</i></b></br></p>
+    <p style="text-align: center; text-shadow: 0 0 15px red;" class="floopywebdesc">Welcome to Floopy Web, where freedom meets the internet. Enter anything on your mind in the box below, it could be a thing you want to search up, or you want to unblock a webpage. Just type what you want to search up or what link you want to unblock then press the "GO" button.</p>
     <center>
         <textarea id="floopywebsearchbar" style="border: none; outline: none; background-color: #f1f1f1; font-family: Arial, sans-serif; font-size: 18px; padding: 10px; border-radius: 10px; width: 900px;" class="floopywebsearchbar"></textarea>
     </center>
