--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😲 v1.0 just dropped! Fifteen new games, and cool features! 🤯 <i>[v1.0]</i></p>
+        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
