--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😲 v1.0 just dropped! Fifteen new games, and cool features! 🤯 <i>[v1.0]</i></p>
+        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to Unblocked Websites.</p>
+
+    <div class="gamediv">
+        <a href="https://www.hoodamath.com/games/#gsc.tab=0">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.8ecWf9W30hfzePCmpa3inwHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Unblocked" width="150" height="150"></button>
+            <p class="gameundertext">HoodaMath</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://abyssthing.duckdns.org/">
