--- a/apps.html
+++ b/apps.html
@@ -9,11 +9,32 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
+        <p class="updatetext">🤩 v1.2 has arrived! 5 NEW Games, Bug Fixes, 3 NEW Apps, and more! 🍿 <i>[v1.2]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the apps section.</p>
+
+    <div class="gamediv">
+        <a href="https://yeahmovies.tv/cmovies">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.HMhilueBCuTRyA5X3AkFagAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">cMovies</p>
+        </a>
+    </div>
+
+    <div class="gamediv">
+        <a href="https://blackbox.ai">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.G0UibCghdr4hHxEuW8TGewHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">Blackbox AI</p>
+        </a>
+    </div>
+
+    <div class="gamediv">
+        <a href="https://translate.google.com/">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.QdLOjoqXiyQkisRK8jIvZQAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">Google Translate</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://scratch.mit.edu/projects/121652582/fullscreen">
