--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,30 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
+        <p class="updatetext">🤩 v1.2 has arrived! 5 NEW Games, Bug Fixes, 3 NEW Apps, and more! 🍿 <i>[v1.2]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v1.1 - <span style="color: yellow">6/10/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.2 - <span style="color: yellow">6/11/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Fixed Game Duplication Glitch from v1.1</li>
+            <li>Fixed Unblocked Website Equinox V1</li>
+            <li>Added app Google Translate</li>
+            <li>Added app Blackbox AI</li>
+            <li>Added app cMovies</li>
+            <li>Added unblocked website 𝟛𝕏 ℙ𝕠𝕥𝕒𝕥𝕠𝕖𝕤</li>
+            <li>When a game is launched, Floopy will automatically bring your scrollbar to the top of the screen.</li>
+            <li>Added game Dummy Never Fails</li>
+            <li>Added game Bloons Tower Defense 3</li>
+            <li>Added game Bloons Tower Defense 4</li>
+            <li>Added game Stealing the Diamond</li>
+            <li>Added game Fleeing the Complex</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v1.1 - <span style="color: yellow">6/10/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added a README</li>
             <li>Added the game Dots.io</li>
