--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😆 v1.1 is here! 21 NEW Games in one update! A new record! 🤯 <i>[v1.1]</i></p>
+        <p class="updatetext">🤩 v1.2 has arrived! 5 NEW Games, Bug Fixes, 3 NEW Apps, and more! 🍿 <i>[v1.2]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to Unblocked Websites.</p>
+
+    <div class="gamediv">
+        <a href="https://sites.google.com/view/tripplethepotatoes/home?authuser=0">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.Uq8YPkssRGnfsB326YBqoAHaGL?rs=1&pid=ImgDetMain&adlt=strict" alt="Unblocked" width="150" height="150"></button>
+            <p class="gameundertext">𝟛𝕏 ℙ𝕠𝕥𝕒𝕥𝕠𝕖𝕤</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://www.hoodamath.com/games/#gsc.tab=0">
@@ -500,8 +507,8 @@
     </div>
 
     <div class="gamediv">
-        <a href="http://74.208.202.111/">
-            <button class="choicegamebtn"><img src="http://74.208.202.111/assets/favicon.ico" alt="Unblocked" width="150" height="150"></button>
+        <a href="https://minnetonkapublicschools.potomacriversafetycommittee.org/">
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/master/equinox.PNG" alt="Unblocked" width="150" height="150"></button>
             <p class="gameundertext">Equinox V1</p>
         </a>
     </div>
