--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,39 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🤩 v1.2 has arrived! 5 NEW Games, Bug Fixes, 3 NEW Apps, and more! 🍿 <i>[v1.2]</i></p>
+        <p class="updatetext">👾 v1.3 just dropped! 20 NEW Games, Bug Fixes, NEW features, and more! 😀 <i>[v1.3]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v1.2 - <span style="color: yellow">6/11/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.3 - <span style="color: yellow">6/12/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Fixed multiple "No results." bug</li>
+            <li>Added drag featue to Floopy Phone</li>
+            <li>Added game Infiltrating the Airship</li>
+            <li>Added game Breaking the Bank</li>
+            <li>Added game Escaping the Prison</li>
+            <li>Added game The Impossible Quiz</li>
+            <li>Added game Learn to Fly 2</li>
+            <li>Added game Learn to Fly 3</li>
+            <li>Added game Riddle School 2</li>
+            <li>Added game Whack your Boss</li>
+            <li>Added game Monster Truck Destroyer</li>
+            <li>Added game Bloxorz</li>
+            <li>Added game Poly Track</li>
+            <li>Added game Fruit Merge</li>
+            <li>Added game A Small World Cup</li>
+            <li>Added game Snowball.io</li>
+            <li>Added game Angry Birds</li>
+            <li>Added game Among Us</li>
+            <li>Added game Duck Life</li>
+            <li>Added game Duck Life 2</li>
+            <li>Added game Duck Life 3</li>
+            <li>Added game Duck Life 4</li>
+        </ul>
+    </div>
+    <div>
+        <h1>release v1.2 - <span style="color: yellow">6/11/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Fixed Game Duplication Glitch from v1.1</li>
             <li>Fixed Unblocked Website Equinox V1</li>
