--- a/floopyweb.html
+++ b/floopyweb.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🤩 v1.2 has arrived! 5 NEW Games, Bug Fixes, 3 NEW Apps, and more! 🍿 <i>[v1.2]</i></p>
+        <p class="updatetext">👾 v1.3 just dropped! 20 NEW Games, Bug Fixes, NEW features, and more! 😀 <i>[v1.3]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
